--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-POSTGRES_USER=root
-POSTGRES_PASSWORD=user123
-POSTGRES_HOST=127.0.0.1
-POSTGRES_PORT=5431
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 POSTGRES_DATABASE=postgres
 POSTGRES_DEBUG=true
-SERVICE_PORT=8080
+SERVICE_PORT=1323
 POSTGRES_MIGRATION_PATH=../migrations
